# groovdeck

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup.sh
src/: AudioEngine.cpp  AudioEngine.h  EffectsPanel.cpp  EffectsPanel.h  EffectsProcessor.cpp  EffectsProcessor.h  LiveLoopPanel.cpp  LiveLoopPanel.h  LiveLooper.cpp  LiveLooper.h  MIDIController.cpp  MIDIController.h  MainApplication.cpp  MainApplication.h  MainComponent.cpp  MainComponent.h  ProjectManager.cpp  ProjectManager.h  SampleSlicer.cpp  SampleSlicer.h  SampleSlicerPanel.cpp  SampleSlicerPanel.h  Sequencer.cpp  Sequencer.h  SequencerPanel.cpp  SequencerPanel.h
